@@ -1,6 +1,6 @@
 Package: metagenomeSeq
 Title: Statistical analysis for sparse high-throughput sequencing
-Version: 1.2.28
+Version: 1.2.29
 Date: 2013-08-20
 Author: Joseph Nathaniel Paulson, Mihai Pop,  Hector Corrada Bravo
 Maintainer: Joseph N. Paulson <jpaulson@umiacs.umd.edu>
@@ -27,6 +27,7 @@ Collate:
     'zigControl.R'
     'cumNorm.R'
     'plotOTU.R'
+    'plotOrd.R'
     'fitZig.R'
     'doCountMStep.R'
     'doZeroMStep.R'
